# verkle-ref-values

./: Cargo.toml
data/kaustinen/: genesis.json  trie-kv.txt
